--- a/css2/estilos.css
+++ b/css2/estilos.css
@@ -1,3 +1,20 @@
+nav {
+  width: 100%;
+  background-color: violet;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+nav > li {
+  padding-right: 20px;
+  list-style: none;
+}
+
+nav li > a {
+  text-decoration: none;
+  color: white;
+}
 .container {
   color: pink;
   background-color: whitesmoke;
