--- a/css2/estilos.css
+++ b/css2/estilos.css
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  background-color: red;
+  background-color: blue;
   display: flex;
   align-items: center;
   justify-content: flex-end;
