--- a/css2/estilos.css
+++ b/css2/estilos.css
@@ -1,3 +1,6 @@
+/* * {
+  box-sizing: border-box;
+} */
 nav {
   width: 100%;
   background-color: yellow;
@@ -18,4 +21,11 @@ nav li > a {
 .container {
   color: pink;
   background-color: whitesmoke;
+}
+
+main {
+  width: auto;
+  border: 10px solid black;
+  padding: 30px 50px;
+  height: 500px;
 }
